# Fintech

./: .gitignore  AdditionalContentPoliMI.ipynb  Arnau_Maxime.ipynb  BC_1_Group17.ipynb  BC_2_Group17.ipynb  BankClients_Metadata.csv  CODE.FINTECH.BC1.ipynb  CODE.FINTECH.BC1_repaired_after_metrics.ipynb  EDA.ipynb  EDA.md  EDA_Merged.ipynb  EDA_final_version.ipynb  EstimatingNeedsPoliMI.ipynb  EstimatingNeedsPoliMI_KNN.ipynb  FinancialNeeds_NBA v1sv.ipynb  LVQ.ipynb  README.md  SegmentingClientsPoliMI.ipynb  Updating_PersonasPoliMI.ipynb  Zenti_Business_Case_2.md  Zenti_Business_Case_3.md  bayesian-learning.ipynb  best_accum_model.pkl  best_income_model.pkl  classification-dl-models.ipynb  classification-ml-models.ipynb  classification-ml-models.md  classification-models.ipynb  classification_ml_models.ipynb  classification_ml_models_v2.ipynb  clustering&profiling.ipynb  ml-pipeline-diagram.excalidraw  presentation.tex  pyproject.toml  recommend-system.ipynb  references.bib
.github/workflows/: colab-badge.yml
BC1/: BC_1_Group17.ipynb
BC2/: Dataset2_Needs.xls  EDA.ipynb  README.md  best_income_model_rf.pkl  classification-dl-models.ipynb  presentation.tex  recommend-system.ipynb
BC2_GROUP17/: EDA.ipynb  classification-dl-models.ipynb  recommend-system.ipynb
BC3/: Portfolio_ReplicaPoliMIv2.ipynb  README.md  TODO.md  dl.ipynb
PPT/: PPT.tex
result/: bayesian-clustered-bankClients.xlsx  lvq_prototypes_interpreted.csv  persona-bayesian.csv
