[project]
name = "fintech"
version = "0.1.0"
description = "Fintech case study"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytorch-tabnet2>=4.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
